MAT-212
* Started reimplementing unit tests for automatic namespace detection